[DS-707] Replace inefficient boxed primitive construction.
git-svn-id: http://scm.dspace.org/svn/repo/dspace/trunk@5485 9c30dcfa-912a-0410-8fc2-9e0234be79fd